--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rusticle"
-version = "1.3.0"
+version = "1.4.0"
 edition = "2024"
 
 [dependencies]
 
 [profile.release]
-opt-level = 3              # Default: 3
+opt-level = "z"            # Default: 3
 debug = false              # Default: false
 split-debuginfo = "packed" # Default: "packed"
 strip = "none"             # Default: "none"
