Switched to `#![no_std]` and replaced `std`-based printing and exit with Windows API calls.
- Removed `std` dependency and added `#![no_std]`
- Replaced `println!` with `WriteConsoleA` via FFI
- Added a dummy panic handler to satisfy `no_std` requirements
- Replaced `std::process::exit` with `ExitProcess`
- Updated `build.rs` to link `kernel32` manually

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "rusticle"
-version = "1.5.0"
+version = "1.6.0"
 edition = "2024"
 
 [dependencies]
+
+[profile.dev]
+panic = "abort"            # Default: "unwind"
 
 [profile.release]
 opt-level = "z"            # Default: 3
